Replace redis with valkey

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,11 @@ services:
     image: memcached:latest
     ports:
       - 11211:11211
-  redis:
-    image: redis:latest
+  # redis:
+  #   image: redis:latest
+  #   ports:
+  #     - 6379:6379
+  valkey:
+    image: valkey/valkey:unstable
     ports:
       - 6379:6379
